service-consulta-saldo-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consulta-saldo-gateway
  name: consulta-saldo-gateway
  namespace: redhat-integration
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: consulta-saldo-gateway
