route-consulta-saldo-gateway.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: consulta-saldo-gateway
  name: consulta-saldo-gateway
  namespace: redhat-integration
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: consulta-saldo-gateway
    weight: 100
